examples/tests/compile_fail/inc_dec_non_numeric_fail.zl
struct Point {
    x i32,
    y i32
}

fun main() >> i32 {
    Point p;
    p.x = 1;
    p++;
    return 0;
}
